New features, fixes in version 1.0.6 (TBD)

  The configuration variables $subtreeSets and $gMailer from collect-subtrees
  have now been exorcized in favor of $gSubtreeSets and $gMailer, respectively,
  in cricket-conf.pl. [Bug #847413]

New features, fixes in version 1.0.5

	Cricket 1.0.5 is essentially a minor bugfix release.

	An error with case dependance with new style views was eliminated.

	A "label" tag was added to the "view" dictionary. This eliminates
	the need for using spaces in view names. It also allows the Cricket
	admin to alias different targetTypes to the same name in the
	HTML menu -- use this feature wisely!

	systemPerfConf.pl was reverted back to using our own SNMP_Session
	based SNMP interface, and interfaces detection was added [Mike Han]

	The distributed sample-config/Defaults has width-hint and
	height-hint commented out, to cut down on squashed graphics.

	The handling of NaN was standardized throughout the code.
	To check for NaN, use isNaN from Common::Util.

	All text files now have LF line endings. In the 1.0.4 release,
	a number of files were inadvertantly changed to have CRLF line
	endings.

	A small bug in threshold monitoring was identified and fixed
	by Jase MacLeod.

	Error reporting by the monitor subsystem has been reviewed and
	made more extensive, based on a patch by Andrew Clark.
	If you have scripts that look for the text string "Skipping",
	you are well advised to look for "Monitor" instead, and review
	your scripts while you're at it.

	We now support s390x-linux, thanks to Shane Stixrud. [Patch
	#877924]

New features, fixes in version 1.0.4

	Added span option for monitor-thresholds of all types [Patch #838250].

	Added new option to log entry format [Patch #565877].

	Added new META monitor thresholds action [Patch #821255].

	Added support for sparc64-netbsd from Edwin Mons [Patch #803408].

	Documented the "use-gprint" target option [Bug #667178].

	Documented the "show-path" target option [Bug #667179].
